# VideoConverter

./: .gitignore  CMakeLists.txt  Makefile
header_files/: header.hpp
source_files/: main.cpp  video_converter.cpp
